Added duration property

--- a/test/index.html
+++ b/test/index.html
@@ -24,7 +24,7 @@
 <body>
     <ul>
     	<li class="item item1 dummyRevial" data-reverse="true"></li>
-    	<li class="item item2 dummyRevial"></li>
+    	<li class="item item2 dummyRevial" data-duration="10000"></li>
     	<li class="item item3 dummyRevial" data-offset="10"></li>
     	<li class="item item4 dummyRevial"></li>
     </ul>
